<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="an.com.metronom.MainActivity">
    <!--android:background="#FFEEAA"-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_mode"
            android:textAlignment="center"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/colorManualModePanel"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonVibration"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"

                android:drawableTop="@drawable/v3w"
                android:paddingTop="10dp" />

            <Button
                android:id="@+id/buttonFlash"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"

                android:drawableTop="@drawable/f1w"
                android:paddingTop="10dp" />

            <Button
                android:id="@+id/buttonSound"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"

                android:drawableTop="@drawable/s1w"
                android:paddingTop="10dp" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/bpm_text"
            android:textAlignment="center"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">


            <EditText
                android:id="@+id/editTextBmp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="right"
                android:inputType="number"
                android:text="@string/set_bpm"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/bpm"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textViewMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textSize="26sp"
                android:onClick="onClickDown"/>

            <SeekBar
                android:id="@+id/seekBarBmp"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="top"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:max="200"

                android:progressDrawable="@drawable/seek_bar_xml"
                android:thumb="@drawable/arrows1"
                />

            <TextView
                android:id="@+id/textViewPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textSize="26sp"
                android:clickable="true"
                android:onClick="onClickUp"/>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageViewIndicator"
        android:layout_marginTop="40dp"
        android:background="@color/colorButtonStart"
        android:text="@string/start"
        android:textSize="20sp"  />

    <TextView
        android:id="@+id/textViewIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/indicator"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageViewIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewIndicator"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/indicator0b"
        android:contentDescription="@string/imageViewIndicator" />


</RelativeLayout>
